--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Site not yet ready :(
+---
+layout: default
+title: Mon blog
+---
+
+<div class="jumbotron">
+    <div class="container">
+        <h1>Hello, world!</h1>
+        <p>...</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <p>Lorem ipsum dolor sit amet, ...</p>
+    </div>
+    <div class="col-md-6">
+        <p>Vestibulum vulputate eros eu cursus ultricies. ...</p>
+    </div>
+</div>
