Allow changing language

--- a/index.html
+++ b/index.html
@@ -1,20 +1,4 @@
 ---
-layout: default
-title: Mon blog
+redirect_to: home/
+lang: en
 ---
-
-<div class="jumbotron">
-    <div class="container">
-        <h2>Hello, world!</h2>
-        <p>...</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet, ...</p>
-    </div>
-    <div class="col-md-6">
-        <p>Vestibulum vulputate eros eu cursus ultricies. ...</p>
-    </div>
-</div>
