Redirect to a sorry msg

--- a/home/fr/index.html
+++ b/home/fr/index.html
@@ -4,18 +4,6 @@ lang: fr
 ref: home
 ---
 
-<div class ="c1">
-    <div class ="c2">
-        <h2>Bonjour le monde!</h2>
-        <p>...</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet, ...</p>
-    </div>
-    <div class="col-md-6">
-        <p>Vestibulum vulputate eros eu cursus ultricies. ...</p>
-    </div>
-</div>
+<h1>
+    Le site est en construction! Désolé :(
+</h1>
