--- a/home/en/index.html
+++ b/home/en/index.html
@@ -4,18 +4,6 @@ lang: en
 ref: home
 ---
 
-<div class ="c1">
-    <div class ="c2">
-        <h2>Hello, world!</h2>
-        <p>...</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet, ...</p>
-    </div>
-    <div class="col-md-6">
-        <p>Vestibulum vulputate eros eu cursus ultricies. ...</p>
-    </div>
-</div>
+<h1>
+    Site is under construction! Sorry :(
+</h1>
