Basic structure ready. Let's write posts now!

--- a/_pages/repo/en/index.html
+++ b/_pages/repo/en/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: My Blog
 lang: en
-ref: blog
-permalink: papers/
+ref: repo
+see: "see more"
+permalink: git-repository/
 ---
 
 This page will become much more pretty I promise
 
-<h1>Presentation of the papers</h1>
-<p>Here are all the papers I worked on with a brief abstract.
+<h1>Presentation of the github repository</h1>
+<p>Here are all the repository I work(ed) on with a brief abstract.
 Click on the `see more` to have deeper informations.</p>
 
 {% include post_resume.html %}
