--- a/_pages/about/fr/index.html
+++ b/_pages/about/fr/index.html
@@ -3,5 +3,15 @@ layout: default
 lang: fr
 ref: about
 permalink: a-propos/
+headers:
+ - h1
+ - h2
+dates:
+ - d1
+ - d2
+crefs:
+ - cr1.md
+ - cr2.md
 ---
 
+{% include cv.html %}
