--- a/_pages/repo/en/index.html
+++ b/_pages/repo/en/index.html
@@ -3,7 +3,7 @@ layout: default
 lang: en
 ref: repo
 see: "see more"
-permalink: git-repository/
+permalink: en/git-repository/
 ---
 
 This page will become much more pretty I promise
