--- a/_pages/repo/jp/index.html
+++ b/_pages/repo/jp/index.html
@@ -3,7 +3,7 @@ layout: default
 lang: jp
 ref: repo
 see: もっと見る
-permalink: ギット・リポジトリ/
+permalink: jp/git-repository/
 ---
 
 {% include post_resume.html %}
