--- a/_pages/repo/fr/index.html
+++ b/_pages/repo/fr/index.html
@@ -3,7 +3,7 @@ layout: default
 lang: fr
 ref: repo
 see: voir plus
-permalink: dépôt-git/
+permalink: fr/git-repository/
 ---
 
 {% include post_resume.html %}
