add forgotten sentences

--- a/_pages/repo/fr/index.html
+++ b/_pages/repo/fr/index.html
@@ -6,4 +6,8 @@ see: voir plus
 permalink: fr/git-repository/
 ---
 
+<h1>Présentation du the repo github</h1>
+<p>Ici sont affichés les résumés de tous les repo dont je travaille sur (ou travaillais sur).
+    Cliquer sur 'voir plus' pour obtenir plus d'informations.</p>
+
 {% include post_resume.html %}
