Correction of some mistakes

--- a/_pages/repo/en/index.html
+++ b/_pages/repo/en/index.html
@@ -3,7 +3,7 @@ layout: default
 lang: en
 ref: repo
 see: "see more"
-permalink: en/git-repository/
+permalink: en/git-repositories/
 ---
 
 <h1>Presentation of the github repository</h1>
