--- a/_pages/repo/fr/index.html
+++ b/_pages/repo/fr/index.html
@@ -3,7 +3,7 @@ layout: default
 lang: fr
 ref: repo
 see: voir plus
-permalink: fr/git-repository/
+permalink: fr/git-repositories/
 ---
 
 <h1>Présentation du the repo github</h1>
