--- a/_pages/repo/en/index.html
+++ b/_pages/repo/en/index.html
@@ -6,7 +6,7 @@ see: "see more"
 permalink: en/git-repositories/
 ---
 
-<h1><title>Presentation of the github repository</title></h1>
+<h1>Presentation of the github repository</h1>
 <p>Here are all the repository I work(ed) on with a brief abstract.
 Click on the `see more` to have deeper informations.</p>
 
