--- a/_pages/home/en/index.html
+++ b/_pages/home/en/index.html
@@ -5,21 +5,21 @@ ref: home
 permalink: en/home/
 ---
 
-# Welcome!
+<h1>Welcome!</h1>
 I made this website to present a part of my work and myself.
 All that is presented here is in free access so anyone can get interest in, or used what i have done. Enjoy;
 
-## Short presentation
+<h2>Short presentation</h2>
 I am Vincent Samy, a current PhD. student at LIRMM<sup><a href="#ft1">1</a></sup> , Montpellier, France.
 I work on safe falls for humanoid robots, or 'how to control the robot so that it does not smack the ground too hard'.
 As a fall is a relatively fast event (<1s), i have made a point of honor to develop on-line algorithms.
 The main contribution of my thesis is, without doubt, the adaptive qp that enables to tune the motor's PD-gains on-line in order to comply to the impact.
 
-## Research outputs
+<h2>Research outputs</h2>
 Through my different experiences, i have been working on diverse subject.
 From the manipulability of hybrid actuator to humanoids control and more particulary, safe falls. I have worked in laboratories like the complex mechanical system engineering laboratory at Kobe university<sup><a href="#ft2">2</a></sup>, Japan, the LIST<sup><a href="#ft3">3</a></sup> at CEA<sup><a href="#ft4">4</a></sup>, France, ISIR<sup><a href="#ft5">5</a></sup> of the Pierre et Marie Curry university, France, and lastly, the Lirmm.
 
-## Github repository
+<h2>Github repository</h2>
 Through the years i have developed different tool to help me for my PhD. but also for fun.
 I drop on my github repository all libraries I can upload freely.
 
