--- a/_pages/home/fr/index.html
+++ b/_pages/home/fr/index.html
@@ -5,19 +5,19 @@ ref: home
 permalink: fr/home/
 ---
 
-# Bienvenue !
+<h1>Bienvenue !</h1>
 Ce site répertorie une partie des informations sur moi et mon travail.
 L'ensemble des librairies et articles présentés ici sont en accès libre sur internet.
 Un lien est donné pour chacun(e)s d'entre eux(elles). Enjoy ;)
 
-## Brève présentation
+<h2>Brève présentation</h2>
 Je m'appelle Vincent Samy, je suis actuellement un thèse au Lirmm<sup><a href="#ft1">1</a></sup> , Montpellier, France.
 Je travaille sur les chutes sécurisées de robot humanoïde ou, "Comment faire en sorte que le robot ne mange pas le sol trop violemment".
 Une chute étant un instant très cours (<1s), j'ai mis un point d'honneur à créer des algorithmes réalisables en-ligne.
 La principale contribution apportée de mes travaux est sans doute le QP adaptatif capable de résoudre le complexe problème du contrôle d'un robot humanoïde
 avec la possibilité de rechercher les gains moteur adéquats pour complier à un impact.
 
-## Mes recherches
+<h2>Mes recherches</h2>
 Depuis mon master, j'ai étudié divers sujets de la robotique.
 De l'analyse de manipulabilité de systèmes à actionneurs hybrides au contrôle de robotique humanoïde appliqué aux chutes.
 J'ai pû travailler dans différents laboratoires tels que 
@@ -25,7 +25,7 @@ le laboratoire d'ingénierie de systèmes mécaniques complexes à l'université
 le list<sup><a href="#ft3">3</a></sup> au CEA<sup><a href="#ft4">4</a></sup> de Saclay, 
 l'ISIR<sup><a href="#ft5">5</a></sup> à l'université Pierre et Marie Curry de Paris et enfin le Lirmm.
 
-## Le dépôt github
+<h2>Le dépôt github</h2>
 Je dépose dans mon dépôt sur github toutes les librairies et tous les programmes que je peux mettre en libre accès.
 Cela comprend les librairies créées pendant ma thèse, et celles pour le fun.
 
