--- a/_pages/home/en/index.html
+++ b/_pages/home/en/index.html
@@ -16,7 +16,9 @@ As a fall is a relatively fast event (<1s), i have made a point of honor to deve
 The main contribution of my thesis is, without doubt, the adaptive qp that enables to tune the motor's PD-gains on-line in order to comply to the impact.
 I also used polytopes coupling with an MPC to predict forces the adaptive-qp should aim for.
 
-I changed field and I currently work on musculoskeletal models.
+I changed field and I currently work on musculoskeletal models. 
+The aim is to create a software for assisting workers during their tasks.
+The system watches the risk of physical health problem such as back pain.
 
 <h2>Research outputs</h2>
 Through my different experiences, i have been working on diverse subject.
@@ -32,8 +34,7 @@ I drop on my github repository all libraries I can upload freely.
     <li><sup id="ft0">1. <a href="http://jrl-umi3218.github.io">Joint Research Laboratory</a></sup></li>
     <li><sup id="ft1">2. <a href="http://www.lirmm.fr/lirmm_eng">Laboratory of Informatics, Robotics and Microelectronics</a></sup></li>
     <li><sup id="ft2">3. <a target="_blank" href="http://www.research.kobe-u.ac.jp/eng-complex/index-e.html">website</a></sup></li>
-    <li><sup id="ft3">4. <a target="_blank" href="http://www-list.cea.fr">
-    Laboratory of Systems and Technologies Integration</a></sup></li>
+    <li><sup id="ft3">4. <a target="_blank" href="http://www-list.cea.fr">Laboratory of Systems and Technologies Integration</a></sup></li>
     <li><sup id="ft4">5. <a target="_blank" href="http://www.cea.fr">Alternative Energies and Atomic Energy Commission</a></sup></li>
     <li><sup id="ft5">6. <a target="_blank" href="http://www.isir.upmc.fr">Robotics and Intelligent Systems Institute</a></sup></li>
 </ul>
