--- a/_pages/home/fr/index.html
+++ b/_pages/home/fr/index.html
@@ -11,19 +11,18 @@ L'ensemble des librairies et articles présentés ici sont en accès libre sur i
 Un lien est donné pour chacun(e)s d'entre eux(elles). Enjoy ;)
 
 <h2>Brève présentation</h2>
-Je m'appelle Vincent Samy, je suis actuellement un thèse au Lirmm<sup><a href="#ft1">1</a></sup> , Montpellier, France.
-Je travaille sur les chutes sécurisées de robot humanoïde ou, "Comment faire en sorte que le robot ne mange pas le sol trop violemment".
-Une chute étant un instant très cours (<1s), j'ai mis un point d'honneur à créer des algorithmes réalisables en-ligne.
-La principale contribution apportée de mes travaux est sans doute le QP adaptatif capable de résoudre le complexe problème du contrôle d'un robot humanoïde
-avec la possibilité de rechercher les gains moteur adéquats pour complier à un impact.
+Je m'appelle Vincent Samy, je suis actuellement post-doctorant à l'AIST<sup><a href="#ft1">1</a></sup> , Tsukuba, Japon.
+Je travaille sur les modèles musculosquelettiques et le calcul temps réel des efforts humains. 
+Pour ce faire, nous utilisons différents types de capteurs tels que des cameras de motion capture (comme au cinéma), des IMUs ou plus récemment des cameras de tous les jours. 
+L’objectif est de construire un logiciel pour la prévention des douleurs musculaires en usine.
 
 <h2>Mes recherches</h2>
 Depuis mon master, j'ai étudié divers sujets de la robotique.
 De l'analyse de manipulabilité de systèmes à actionneurs hybrides au contrôle de robotique humanoïde appliqué aux chutes.
-J'ai pû travailler dans différents laboratoires tels que 
-le laboratoire d'ingénierie de systèmes mécaniques complexes à l'université de Kobe<sup><a href="#ft2">2</a></sup>, Japon, 
-le list<sup><a href="#ft3">3</a></sup> au CEA<sup><a href="#ft4">4</a></sup> de Saclay, 
-l'ISIR<sup><a href="#ft5">5</a></sup> à l'université Pierre et Marie Curry de Paris et enfin le Lirmm.
+J'ai pû travailler dans différents laboratoires tels que le Lirmm<sup><a href="#ft2">2</a></sup>
+le laboratoire d'ingénierie de systèmes mécaniques complexes à l'université de Kobe<sup><a href="#ft3">3</a></sup>, Japon, 
+le list<sup><a href="#ft4">4</a></sup> au CEA<sup><a href="#ft5">5</a></sup> de Saclay, 
+l'ISIR<sup><a href="#ft6">6</a></sup> à l'université Pierre et Marie Curry de Paris et enfin l'AIST.
 
 <h2>Le dépôt github</h2>
 Je dépose dans mon dépôt sur github toutes les librairies et tous les programmes que je peux mettre en libre accès.
@@ -31,9 +30,10 @@ Cela comprend les librairies créées pendant ma thèse, et celles pour le fun.
 
 <hr>
 <ul>
-    <li><sup id="ft1">1. <a target="_blank" href="http://www.lirmm.fr">Laboratoire d'Informatique, de robotique et de Micro-électronique</a></sup></li>
-    <li><sup id="ft2">2. <a target="_blank" href="http://www.research.kobe-u.ac.jp/eng-complex/index-e.html">Site internet</a></sup></li>
-    <li><sup id="ft3">3. <a target="_blank" href="http://www-list.cea.fr">Laboratoire d'Intégration de Systèmes et des technologies </a></sup></li>
-    <li><sup id="ft4">4. <a target="_blank" href="http://www.cea.fr">Le Commissariat à l’énergie atomique et aux énergies alternatives</a></sup></li>
-    <li><sup id="ft5">5. <a target="_blank" href="http://www.isir.upmc.fr">Institut des Systèmes Intelligents et de Robotique</a></sup></li>
+    <li><sup id="ft1">1. <a target="_blank" href="https://www.aist.go.jp/index_en.html">National Institute of Advanced Industrial Science and Technology</a></sup></li>
+    <li><sup id="ft2">2. <a target="_blank" href="http://www.lirmm.fr">Laboratoire d'Informatique, de robotique et de Micro-électronique</a></sup></li>
+    <li><sup id="ft3">3. <a target="_blank" href="http://www.research.kobe-u.ac.jp/eng-complex/index-e.html">Site internet</a></sup></li>
+    <li><sup id="ft4">4. <a target="_blank" href="http://www-list.cea.fr">Laboratoire d'Intégration de Systèmes et des technologies </a></sup></li>
+    <li><sup id="ft5">5. <a target="_blank" href="http://www.cea.fr">Le Commissariat à l’énergie atomique et aux énergies alternatives</a></sup></li>
+    <li><sup id="ft6">6. <a target="_blank" href="http://www.isir.upmc.fr">Institut des Systèmes Intelligents et de Robotique</a></sup></li>
 </ul>
